# affix

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.org  affix-config.cmake.in
affix/: CMakeLists.txt  affix.hpp  config.hpp.in
affix_testing/: CMakeLists.txt  affix_test.cpp  test_macros.hpp
cmake/: affix_version.cmake
